--- a/index.html
+++ b/index.html
@@ -3,9 +3,31 @@
 	<head>
 		<meta charset="utf-8">
 		<title></title>
+		<style type="text/css">
+			body {
+				width: 1200px;
+				margin: 0 auto;
+			}
+			h2 {
+				text-align: center;
+			}
+			#box a {
+				display: block;
+				width: 150px;
+				height: 100px;
+				text-decoration: none;
+				font-size: 20px;
+			}
+			#box a:hover {
+				color: red;
+			}
+		</style>
 	</head>
 	<body>
-		<h1>hello</h1>
-		<a href="./game/Tetris.html">俄罗斯方块</a>
+		<h2>~欢~迎~来~到~我~的~世~界~</h2>
+		<div id="box">
+			<a href="./game/Tetris.html">俄罗斯方块</a>
+			<a href="./game/Snake.html">贪吃蛇</a>
+		</div>
 	</body>
 </html>
