--- a/game/Snake.html
+++ b/game/Snake.html
@@ -3,15 +3,15 @@
 	<head>
 		<meta charset="utf-8">
 		<title></title>
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="SnakeCss/style.css">
 	</head>
 	<body>
 		<div id="map"></div>
 
-		<script src="js/tools.js"></script>
-		<script src="js/food.js"></script>
-		<script src="js/snake.js"></script>
-		<script src="js/game.js"></script>
-		<script src="js/main.js"></script>
+		<script src="SnakeJs/tools.js"></script>
+		<script src="SnakeJs/food.js"></script>
+		<script src="SnakeJs/snake.js"></script>
+		<script src="SnakeJs/game.js"></script>
+		<script src="SnakeJs/main.js"></script>
 	</body>
 </html>
